// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Menu /> is hidden 1`] = `null`;

exports[`<Menu /> renders correctly on left 1`] = `
<View
  style={
    Object {
      "height": "100%",
      "left": -750,
      "position": "absolute",
      "width": "100%",
      "zIndex": 50,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "rgba(255, 255, 255, 0)",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <RCTScrollView
      style={
        Object {
          "backgroundColor": "#bcab79",
          "paddingTop": 0,
          "width": "80%",
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "height": 0,
            }
          }
        />
      </View>
    </RCTScrollView>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "height": "100%",
          "opacity": 1,
          "width": "20%",
        }
      }
    >
      <Text
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Menu /> renders correctly on right 1`] = `
<View
  style={
    Object {
      "height": "100%",
      "left": 750,
      "position": "absolute",
      "width": "100%",
      "zIndex": 50,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "rgba(255, 255, 255, 0)",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "height": "100%",
          "opacity": 1,
          "width": "20%",
        }
      }
    >
      <Text
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        
      </Text>
    </View>
    <RCTScrollView
      style={
        Object {
          "backgroundColor": "#bcab79",
          "paddingTop": 0,
          "width": "80%",
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#d0ccd0",
              "height": 75,
              "marginBottom": 20,
              "width": "100%",
            }
          }
        />
        <View
          style={
            Object {
              "height": 0,
            }
          }
        />
      </View>
    </RCTScrollView>
  </View>
</View>
`;
